# coding-dojo

./: .bazelrc  .clang-tidy  .flake8  .gitmodules  BUILD.bazel  README.md  WORKSPACE.bazel  bootstrap.sh  package.json  unbox-bazel.config.js
.rh-project/: auto-code-groups  bootstrap.sh  build-all.sh  build-binary-gap-cpp14.sh  build-binary-gap-cpp20.sh  build-binary-gap.sh  build-count-conforming-bitmasks-cpp20.sh  clean-all.sh  generate-compdb.sh  init.el  list-compdb-targets.sh  perf-binary-gap-cpp20.sh  perf-count-conforming-bitmasks-cpp20.sh  run-binary-gap-cpp14.sh  run-binary-gap-cpp20.sh  run-binary-gap.sh  run-count-conforming-bitmasks-cpp20.sh  test-binary-gap-cpp14.sh  test-binary-gap-cpp20.sh  test-binary-gap.sh  test-count-conforming-bitmasks-cpp20.sh  test-warp.sh
auto-code/: config.py
auto-code/models/: __init__.py  cc-all.py  cc-targets-model.py  test-model.py
auto-code/templates/: cc-targets.mako  targets-list.mako  test-template.mako
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
tools/: auto-code.sh  bazel  compdb-unbox.sh  pre-build.sh
