# Hey Emacs, this is -*- coding: utf-8; mode: bazel -*-

load("@rules-compdb//:defs.bzl", "compilation_database")

targets = [
  ## /a/$ auto-code cc-all targets-list
  ## /a/{

  # model: auto-code/models/cc-all.py
  # template: auto-code/templates/targets-list.mako

  "//packages/binary-gap/cpp20:main",
  "//packages/binary-gap/cpp20:main-perf",
  "//packages/binary-gap/cpp20:main-test-binary",
  "//packages/count-conforming-bitmasks/cpp20:force",
  "//packages/count-conforming-bitmasks/cpp20:force-test-binary",
  "//packages/count-conforming-bitmasks/cpp20:main",
  "//packages/count-conforming-bitmasks/cpp20:main-perf",
  "//packages/count-conforming-bitmasks/cpp20:main-test-binary",
  "//packages/test0/cpp14:main",
  "//packages/test0/cpp14:main-perf",
  "//packages/test0/cpp14:main-test-binary",

  ## /a/}
]

compilation_database(
  name = "compdb",
  targets = targets,
  module_exts = ["cpp"],
)

filegroup(
  name = "cc-all",
  srcs = targets + [":compdb"]
)
