# Hey Emacs, this is -*- coding: utf-8; mode: bazel -*-

workspace(name = "coding-dojo")

register_execution_platforms(
  "//external/platforms:x86_64-linux-platform",
)

register_toolchains(
  # "@local_config_cc//:all",
  # "//external/platforms:x86_64-linux-clang_14_0_6-toolchain",
  # "//external/platforms:x86_64-linux-clang_15_0_0-toolchain",
  # "@local_config_cc//:cc-toolchain-x64_windows-clang-cl"
  # Target patterns are also permitted, so you could have also written:
  # "//bar_tools:all",
)

local_repository(
  name = "rules-compdb",
  path = "external/bazelbuild-rules-compdb",
)

local_repository(
  name = "cpp-utils",
  path = "external/cpp-utils",
)

local_repository(
  name = "range-v3",
  path = "external/range-v3",
)

local_repository(
  name = "boost",
  path = "external/boost",
)

new_local_repository(
  name = "system",
  path = "/usr/lib/x86_64-linux-gnu",
  build_file = "system.BUILD.bazel",
)
