# Hey Emacs, this is -*- coding: utf-8; mode: bazel -*-

# package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_toolchain_suite", "cc_toolchain")

load(":cc_toolchain_config.bzl", "cc_toolchain_config")

filegroup(name = "empty")

cc_toolchain_config(name = "k8_toolchain_config")

cc_toolchain(
  name = "k8_toolchain",
  toolchain_identifier = "k8-toolchain",
  toolchain_config = ":k8_toolchain_config",
  all_files = ":empty",
  compiler_files = ":empty",
  dwp_files = ":empty",
  linker_files = ":empty",
  objcopy_files = ":empty",
  strip_files = ":empty",
  supports_param_files = 0,
)

cc_toolchain_suite(
  name = "clang_suite",
  toolchains = {
    "k8": ":k8_toolchain",
  },
)

toolchain(
  name = "platform_k8_toolchain",
  target_compatible_with = [
    "@platforms//cpu:x86_64",
  ],
  toolchain = ":k8_toolchain",
  toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

platform(
  name = "x86_platform",
  constraint_values = [
    "@platforms//cpu:x86_64",
  ],
)
